# temporis

./: .cz.toml  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  flake.nix  index.html  justfile  org.reciperium.temporis.desktop
.github/: dependabot.yml
.github/workflows/: binary-cache.yaml  bump.yaml  bundle.yaml  pull-request.yaml  website.yaml
assets/: CNAME  index-29aPgmHK.js  index-BSwrotPE.js  index-Bquy9BRY.css  index-CiOsjlKa.js  index-DTYg4ndr.css  index-MemjdHLu.js
assets/audio/: bell-a.flac  bell-b.flac
site/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
site/src/: main.ts
src/: conf.rs  error.rs  lib.rs  main.rs  progress.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  notifications.rs  progress.rs
src/platform/macos/: mod.rs  notifications.rs
src/platform_interfaces/: mod.rs  notifications.rs  progress.rs
ui/: globals.slint  main.slint
ui/components/: divider.slint  link.slint
ui/pages/: pomodoro.slint  settings.slint
