[package]
name = "temporis"
version = "0.7.2"
edition = "2024"
license-file = "LICENSE"
description = "A pomodoro timer focused on attention and well-being"
readme = "README.md"
repository = "https://github.com/reciperium/temporis"
authors = ["Santiago Fraire Willemoes <santiwilly@gmail.com>"]


[dependencies]
config = { version = "0.15.11", features = ["toml"] }
toml = "0.9.10"
directories = "6.0.0"
notify-rust = "4.11.7"
serde = { version = "1.0.219", features = ["derive"] }
slint = "1.11.0"
thiserror = "2.0.12"
rodio = "0.21.1"
webbrowser = "1.0.5"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.7.1"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
binaries_dir = "target/release"
name = "temporis"
product-name = "Temporis"
identifier = "com.reciperium.temporis"
category = "Utility"
resources = ["assets/icons/**"]
out-dir = "bundle"
license_file = "LICENSE"
icons = ["assets/logos/*.png"]

[package.metadata.packager.linux]
# not wanted, as we create our own compliant desktop entry
generate-desktop-entry = false

[package.metadata.packager.deb]
files = { "nix-built-assets/share/applications/com.reciperium.temporis.desktop" = "usr/share/applications/com.reciperium.temporis.desktop", "assets/icons/logo.svg" = "usr/share/icons/hicolor/scalable/apps/com.reciperium.temporis.svg" }
depends = ["libasound2-dev"]

[package.metadata.packager.appimage]
files = { "nix-built-assets/share/applications/com.reciperium.temporis.desktop" = "com.reciperium.temporis.desktop", "assets/icons/logo.svg" = "com.reciperium.temporis.svg" }
